--- a/uCamp - Copy/views/campgrounds/indeks.ejs
+++ b/uCamp - Copy/views/campgrounds/indeks.ejs
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campground</title>
-</head>
-<body>
+
+<% layout('layout/boilerplate') %> 
     <h1>All Campground</h1>
-    <% for (let camp of campground) { %> 
-        <li><a href="/campgrounds/<%= camp.id %>"> <%= camp.title %> </a>
-        <%= camp.location %> </li>
-    <% } %> 
-</body>
-</html>
+    <div>
+        <a href="/campgrounds/new">add campgrounds</a>
+    </div>
+
+<% for (let camp of campground) { %> 
+    <div class="card mb-3">
+        <div class="row">
+             <div class="col-md-4">
+                <img clas ="img-fluid" src="camp.jpg" alt="image">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><%= camp.title %></h5>
+                    <p class="card-text"> <%= camp.description %> </p>
+                    <p class="card-text">
+                        <small class='text-muted'> <%= camp.location %></small>
+                    </p>
+                    <p>
+                        <a class='btn btn-primary' href="/campgrounds/<%= camp.id %> "> View <%= camp.title %></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+<% } %> 
+  
