--- a/uCamp - Copy/views/campgrounds/new.ejs
+++ b/uCamp - Copy/views/campgrounds/new.ejs
@@ -1,23 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New</title>
-</head>
-<body>
-    <form action="/campgrounds" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" name="campground[title]" id="title">
-        </div>
-        <div>
-            <label for="location">location</label>
-            <input type="text" name="campground[location]" id="location">
-        </div>
-        <button>Sumbit</button>
-    </form>
-    
-</body>
-</html>
+
+<% layout('layout/boilerplate') %> 
+<div class="row">
+    <h1 class="text-center">
+        New Campground
+    </h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input  class="form-control" type="text" name="campground[title]" id="title">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" name="campground[location]" id="location">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input class="form-control" type="text" name="campground[image]" id="image">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Campground Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">Rp</span>
+                    <input type="text" class="form-control" id="price" name="campground[price]" placeholder="0" aria-label="price"
+                        aria-describedby="price-label">
+                </div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Descriptions</label>
+                <textarea class="form-control" type="text" name="campground[description]" id="location"></textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Sumbit</button>
+            </div>         
+        </form>
+    </div>
+</div>
