--- a/uCamp - Copy/views/campgrounds/edit.ejs
+++ b/uCamp - Copy/views/campgrounds/edit.ejs
@@ -4,30 +4,45 @@
         Edit Campground
     </h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>">
+                <input class="form-control" type="text" name="campground[title]" id="title" value="<%= campground.title %>" required>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="campground[location]" id="location" value="<%= campground.location %>">
+                <input class="form-control" type="text" name="campground[location]" id="location" value="<%= campground.location %>"required>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>">
+                <input class="form-control" type="text" name="campground[image]" id="image" value="<%= campground.image %>"required>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">Rp</span>
                     <input type="text" class="form-control" id="price" name="campground[price]" placeholder="0"
-                        aria-label="price" aria-describedby="price-label" value="<%= campground.price %>">
+                        aria-label="price" aria-describedby="price-label" value="<%= campground.price %>"required>
+                        <div class="valid-feedback">
+                            Looks Good...
+                        </div>
                 </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Descriptions</label>
-                <textarea class="form-control" type="text" name="campground[description]" id="description" ><%= campground.description %></textarea>
+                <textarea class="form-control" type="text" name="campground[description]" id="description" required><%= campground.description %></textarea>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Edit Campground</button>
