--- a/uCamp - Copy/views/campgrounds/new.ejs
+++ b/uCamp - Copy/views/campgrounds/new.ejs
@@ -5,30 +5,45 @@
         New Campground
     </h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input  class="form-control" type="text" name="campground[title]" id="title">
+                <input  class="form-control" type="text" name="campground[title]" id="title" required>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" name="campground[location]" id="location">
+                <input class="form-control" type="text" name="campground[location]" id="location" required>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" name="campground[image]" id="image">
+                <input class="form-control" type="text" name="campground[image]" id="image" required>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">Rp</span>
                     <input type="text" class="form-control" id="price" name="campground[price]" placeholder="0" aria-label="price"
-                        aria-describedby="price-label">
+                        aria-describedby="price-label" required>
+                        <div class="valid-feedback">
+                            Looks Good...
+                        </div>
                 </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Descriptions</label>
-                <textarea class="form-control" type="text" name="campground[description]" id="location"></textarea>
+                <textarea class="form-control" type="text" name="campground[description]" id="location" required></textarea>
+                <div class="valid-feedback">
+                    Looks Good...
+                </div>
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Sumbit</button>
@@ -36,3 +51,4 @@
         </form>
     </div>
 </div>
+
